# EliteQuant_Cpp

./: .gitignore  README.md  temp.txt
source/: CMakeLists.txt  EliteQuant.sln  README.md
source/.codelite/: EliteQuant.session  refactoring.db
source/EliteQuant/: CMakeLists.txt  EliteQuant.project  EliteQuant.vcxproj  EliteQuant.vcxproj.filters
source/EliteQuant/Brokers/: state_change.xlsx
source/EliteQuant/Brokers/Backtest/: backtestdatafeed.cpp  backtestdatafeed.h
source/EliteQuant/Brokers/BtcChina/: btcchinadatafeed.cpp  btcchinadatafeed.h
source/EliteQuant/Brokers/Ctp/: ctpbrokerage.cpp  ctpbrokerage.h  ctpdatafeed.cpp  ctpdatafeed.h
source/EliteQuant/Brokers/Google/: googledatafeed.cpp  googledatafeed.h
source/EliteQuant/Brokers/IB/: Instruction.txt  ibbrokerage.cpp  ibbrokerage.h  ibbrokerage_linux.cpp  ibbrokerage_linux.h  state_change.xlsx
source/EliteQuant/Brokers/IB/IBJts/samples/Java/TestJavaClient/: AccountDlg.java  AlgoParamsDlg.java  ComboLegDlg.java  ConnectDlg.java  ExecFilterDlg.java  ExtOrdDlg.java  (+9 more)
source/EliteQuant/Brokers/IB/IBJts/source/JavaClient/: pom.xml
source/EliteQuant/Brokers/IB/Official/: EClient.cpp  EReader.cpp  EReaderOSSignal.cpp  EReaderOSSignal.h  StdAfx.h
source/EliteQuant/Brokers/IB/OfficialLinux/: CommissionReport.h  CommonDefs.h  Contract.h  ContractCondition.cpp  ContractCondition.h  DefaultEWrapper.cpp  DefaultEWrapper.h  EClient.cpp  EClient.h  EClientMsgSink.h  EClientSocket.cpp  EClientSocket.h  EClientSocketBase.h  EClientSocketBaseImpl.h  EDecoder.cpp  EDecoder.h  EMessage.cpp  EMessage.h  EMutex.cpp  EMutex.h  EPosixClientSocketPlatform.h  EReader.cpp  EReader.h  EReaderOSSignal.cpp  EReaderOSSignal.h  EReaderSignal.h  EReaderWMSignal.cpp  EReaderWMSignal.h  ESocket.cpp  ESocket.h  ETransport.h  EWrapper.h  Execution.h  IExternalizable.h  MarginCondition.cpp  MarginCondition.h  OperatorCondition.cpp  OperatorCondition.h  Order.h  OrderCondition.cpp  (+19 more)
source/EliteQuant/Brokers/IB/OfficialLinux/client/: ContractCondition.cpp  DefaultEWrapper.cpp  EClient.cpp  EClient.h  EClientSocket.cpp  EDecoder.cpp  EDecoder.h  EMessage.cpp  EMessage.h  EMutex.cpp  EMutex.h  EReader.cpp  EReader.h  EReaderOSSignal.cpp  EReaderOSSignal.h  EReaderWMSignal.cpp  ESocket.cpp  ESocket.h  EWrapper.h  MarginCondition.cpp  OperatorCondition.cpp  OrderCondition.cpp  OrderCondition.h  PercentChangeCondition.cpp  PriceCondition.cpp  SoftDollarTier.cpp  SoftDollarTier.h  StdAfx.cpp  TimeCondition.cpp  VolumeCondition.cpp  executioncondition.cpp
source/EliteQuant/Brokers/IB/OfficialWindows/: CommissionReport.h  CommonDefs.h  Contract.h  EPosixClientSocket.cpp  EPosixClientSocket.h  EPosixClientSocketPlatform.h  Execution.h  IBString.h  ScannerSubscription.h  StdAfx.h
source/EliteQuant/Brokers/IB/OfficialWindows/bak/: Instruction.txt  all.hpp
source/EliteQuant/Brokers/IB/OfficialWindows/client/: EClient.cpp
source/EliteQuant/Brokers/OkCoin/: okcoindatafeed.cpp  okcoindatafeed.h
source/EliteQuant/Brokers/Paper/: paperbrokerage.cpp  paperbrokerage.h  paperdatafeed.cpp  paperdatafeed.h
source/EliteQuant/Brokers/Sina/: sinadatafeed.cpp  sinadatafeed.h
source/EliteQuant/Common/: config.cpp  config.h
source/EliteQuant/Common/Account/: accountinfo.h  accountmanager.cpp  accountmanager.h
source/EliteQuant/Common/Brokerage/: brokerage.cpp  brokerage.h  exchange.cpp  exchange.h
source/EliteQuant/Common/Data/: bar.cpp  bar.h  barinterval.h  barseries.cpp  barseries.h  datamanager.cpp  datamanager.h  datatype.h  marketdatafeed.cpp  marketdatafeed.h  tick.cpp  tick.h  tickreader.h  tickwriter.h
source/EliteQuant/Common/Logger/: logger.cpp  logger.h
source/EliteQuant/Common/Msgq/: msgq.cpp  msgq.h
source/EliteQuant/Common/Order/: fill.h  order.h  orderbook.cpp  orderbook.h  orderidtracker.h  ordermanager.cpp  ordermanager.h  orderstatus.cpp  orderstatus.h  ordertype.h  timeinforce.h
source/EliteQuant/Common/Performance/: performancemanager.cpp  performancemanager.h  reportmanager.cpp  reportmanager.h
source/EliteQuant/Common/Risk/: marginmanager.cpp  marginmanager.h  riskmanager.cpp  riskmanager.h
source/EliteQuant/Common/Security/: currencytype.h  portfoliomanager.cpp  portfoliomanager.h  position.cpp  position.h  security.h  securitytype.h
source/EliteQuant/Common/Strategy/: strategybase.cpp  strategybase.h  strategymanager.cpp  strategymanager.h
source/EliteQuant/Common/Time/: getRealTime.cpp  getRealTime.h  heartbeat.cpp  heartbeat.h  timeutil.cpp  timeutil.h
source/EliteQuant/Common/Util/: calc.cpp  calc.h  consolecontrolhandler.cpp  consolecontrolhandler.h  util.cpp  util.h
source/EliteQuant/Services/: backtestoptimizationengine.cpp  backtestoptimizationengine.h  elitequant_.cpp  tradingengine.cpp  tradingengine.h
source/EliteQuant/Services/Api/: apiservice.cpp  apiservice.h
source/EliteQuant/Services/Brokerage/: brokerageservice.cpp  brokerageservice.h
source/EliteQuant/Services/Data/: dataservice.cpp  dataservice.h
source/EliteQuant/Services/Strategy/: strategyservice.cpp  strategyservice.h
source/EliteQuant/Strategy/: smacross.cpp  smacross.h  strategyFactory.cpp  strategyFactory.h
source/build-eqtrader-Desktop_Qt_5_10_0_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
source/eqserver/: CMakeLists.txt  config.yaml  config_server.yaml  eqserver.vcxproj  main.cpp
source/eqtrader/: CMakeLists.txt  README.md  clientmq.cpp  clientmq.h  cn.qm  cn.ts  config_server.yaml  ctickevent.cpp  ctickevent.h  en.ts  enums.h  eqtrader.pro  eqtrader.pro.user.1600edb  eqtrader.vcxproj  eqtrader.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_clientmq.cpp  moc_mainwindow.cpp  quantManage4.pro  strategybase.cpp  strategybase.h  strategymanager.cpp  strategymanager.h
source/eqtrader/util/: util.h
source/unittest/: data.xml  main.cpp  main_cereal.cpp  main_http.cpp  main_ib.cpp  main_rapidjsn.cpp  main_seasocks.cpp  main_time.cpp  main_yaml.cpp  run.sh  sample.yaml  unittest.vcxproj
source/unittest/data/: marketdata-2017-11-19.txt
(+117 files in other folders)
